# src/api/business/manage/process/process.implementation.js
@@ -1,6 +1,7 @@
 // Business
 import ProcessBusiness from './process.business';
 import RoleBusiness from '../role/role.business';
+import StepBusiness from '../step/step.business';
 
 // Exceptions
 import APIException from '../../../exceptions/api.exception';
@@ -66,6 +67,36 @@ export default class ProcessImplementation extends ProcessBusiness {
         await RoleBusiness.updateRoleFromProcess(processId, roleId, roleName);
 
         return processFound;
+    }
+
+    static async iAddStepToProcess(processId, pStepId) {
+
+        // verify if the process exists
+        const processFound = await this.getProcessById(processId);
+        if (!processFound) {
+            throw new APIException('m.process.process_not_exists', 404);
+        }
+
+        // verify that the step is not registered in the process
+        const stepFound = await StepBusiness.getStepByTypeAndProcess(pStepId, processId);
+        if (stepFound) {
+            throw new APIException('m.process.process_step_registered', 401);
+        }
+
+        await StepBusiness.createStep(pStepId, processId);
+
+        return processFound;
+    }
+
+    static async iGetStepsByProcess(processId) {
+
+        // verify if the process exists
+        const processFound = await this.getProcessById(processId);
+        if (!processFound) {
+            throw new APIException('m.process.process_not_exists', 404);
+        }
+
+        return await StepBusiness.getStepsFromProcess(processId);
     }
 
 }
